Make Douglas A (barely functional) Thing!
* Bare-bones Brain Dump
* RxJS wired up for all Brain Dump activities
* Info from static test dumplings shows up
* Can update static test dumplings' titles and descriptions
Known issues
- Router5-based routing only works on refresh
- Placeholder/Dummy isn't showing up as expected
- Edit controls aren't showing up as expected

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@ System.config( {
 	"defaultJSExtensions": true,
 	"map": {
 		"app": "app/main/app.js",
+		"rx": "node/rx/rx.all.js",
 		"react": "node/react/react.js",
 		"router5": "bower/router5/dist/amd/router5.js",
 		"router5-react": "bower/router5-react/dist/amd/index.js"
