make CRUD operations work on dumplings
- make deleting a dumpling work
- make creating a dumpling work
- use react with addons to get access to immutable helpers
- In ESLint config, don't require @returns for JSDoc comments

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@ System.config( {
 	"map": {
 		"app": "app/main/app.js",
 		"rx": "node/rx/rx.all.js",
-		"react": "node/react/react.js",
+		"react": "node/react/react-with-addons.js",
 		"router5": "bower/router5/dist/amd/router5.js",
 		"router5-react": "bower/router5-react/dist/amd/index.js"
 	}
@@ -23,8 +23,6 @@ System.config( {
 <script>
 System.import( "app" );
 </script>
-
-<img src="media/IT-IS-ALIVE.png" alt="" />
 
 </body>
 </html>
