cleanse of douglas stuff

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>TESTING @!@#</title>
+	<title>REACT VERY MUCH</title>
 	<link rel="stylesheet" type="text/css" href="/css/all.css">
 	<script src="./bower/system.js/dist/system.src.js"></script>
 	<script type="text/javascript">
 System.config( {
 	"defaultJSExtensions": true,
 	"map": {
-		"app": "app/main/app.js",
+		"App": "app/main/App.js",
 		"rx": "node/rx/rx.all.js",
 		"react": "node/react/react-with-addons.js",
 		"router5": "bower/router5/dist/amd/router5.js",
@@ -21,7 +21,7 @@ System.config( {
 
 <div id="app"></div>
 <script>
-System.import( "app" );
+System.import( "App" );
 </script>
 
 </body>
