Got eslint and JS code to a place where I like to look at it

--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>REACT VERY MUCH</title>
-	<link rel="stylesheet" type="text/css" href="/css/all.css">
-	<script src="./bower/system.js/dist/system.src.js"></script>
-	<script type="text/javascript">
-System.config( {
-	"defaultJSExtensions": true,
-	"map": {
-		"App": "app/main/App.js",
-		"rx": "node/rx/rx.all.js",
-		"react": "node/react/react-with-addons.js",
-		"router5": "bower/router5/dist/amd/router5.js",
-		"router5-react": "bower/router5-react/dist/amd/index.js"
-	}
-} );
+  <title>REACT VERY MUCH</title>
+  <link rel="stylesheet" type="text/css" href="/css/all.css">
+  <script src="./bower/system.js/dist/system.src.js"></script>
+  <script type="text/javascript">
+System.config({
+  "defaultJSExtensions": true,
+  "map": {
+    "App": "app/main/app.js",
+    "rx": "node/rx/rx.all.js",
+    "react": "node/react/react-with-addons.js",
+    "router5": "bower/router5/dist/amd/router5.js",
+    "router5-react": "bower/router5-react/dist/amd/index.js"
+  }
+});
 </script>
 </head>
 <body>
 
 <div id="app"></div>
 <script>
-System.import( "App" );
+System.import("App");
 </script>
 
 </body>
