--- a/xold_src/index.html
+++ b/xold_src/index.html
@@ -8,7 +8,7 @@
 System.config({
   "defaultJSExtensions": true,
   "map": {
-    "App": "app/main/App.js",
+    "App": "app/main/app.js",
     "rx": "node/rx/rx.all.js",
     "react": "node/react/react-with-addons.js",
     "router5": "bower/router5/dist/amd/router5.js",
@@ -20,7 +20,6 @@ System.config({
 <body>
 
 <div id="app"></div>
-
 <script>
 System.import("App");
 </script>
