Got homepage working and styled
Reworked breakpoint mixin, it's 300 less lines now
Fixed issue in Gulp where CSS wasn't updating

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>REACT VERY MUCH</title>
-  <link rel="stylesheet" type="text/css" href="/css/all.css">
+  <link rel="stylesheet" type="text/css" href="/css/styles.css">
   <script src="./bower/system.js/dist/system.src.js"></script>
   <script type="text/javascript">
 System.config({
