Added router and got it working

--- a/src/index.html
+++ b/src/index.html
@@ -11,14 +11,12 @@ System.config({
     "App": "app/main/App.js",
     "rx": "node/rx/rx.all.js",
     "react": "node/react/react-with-addons.js",
-    "router5": "bower/router5/dist/amd/router5.js",
-    "router5-react": "bower/router5-react/dist/amd/index.js"
+    "react-router": "node/react-router/ReactRouter.min.js"
   }
 });
 </script>
 </head>
 <body>
-
 <div id="app"></div>
 
 <script>
