Got some basics in for the different screens
Created a placeholder storage system while that's completed (GlobalStore.js)
Fixed gulpfile issues with sass compile
Added comments for increased awesomeness

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>REACT VERY MUCH</title>
   <link rel="stylesheet" type="text/css" href="/css/styles.css">
+  <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, width=device-width, user-scalable=no" />
   <script src="./bower/system.js/dist/system.src.js"></script>
   <script type="text/javascript">
 System.config({
