Removed unnecessary files, moved/renamed some for clarity

--- a/source/index.html
+++ b/source/index.html
@@ -16,6 +16,7 @@ System.config({
   }
 });
 </script>
+<script src="./node/pouchdb/pouchdb.js" type="text/javascript" charset="utf-8" async defer>/* for pouchdb browser plugin */</script>
 </head>
 <body>
 <div id="app"></div>
