Got storage working for game creation, maybe fixed build?

--- a/source/index.html
+++ b/source/index.html
@@ -9,10 +9,12 @@
 System.config({
   "defaultJSExtensions": true,
   "map": {
-    "App": "app/main/App.js",
+    "App": "app/App.js",
     "rx": "node/rx/rx.all.js",
     "react": "node/react/react-with-addons.js",
-    "react-router": "node/react-router/ReactRouter.min.js"
+    "react-router": "node/react-router/ReactRouter.min.js",
+    "pouchdb": "node/pouchdb/pouchdb.js",
+		"pouchdb-find": "node/pouchdb-find/pouchdb.find.js"
   }
 });
 </script>
